--- a/index.html
+++ b/index.html
@@ -138,11 +138,12 @@
       }
      
       .card-containar{
-        padding: 3rem;
+      width: 100%;
         display: grid;
         grid-template-columns: repeat(3,1fr);
         gap:3rem;
-        justify-content: space-between;
+        padding:auto;
+        justify-content:center;
         align-items: center;
       }
       @media (max-width:780px){
@@ -153,10 +154,13 @@
       @media (max-width:440px){
         .card-containar{
           grid-template-columns: repeat(1,1fr);
+          justify-content: center;
+          align-items: center;
         }
       }
 
       .card-element {
+        margin: 3rem;
         display: flex;
         background-color: rgb(224, 218, 218);
         flex-direction: column;
@@ -243,7 +247,7 @@
       }
       @media (max-width:440px) {
         .container{
-          width: 330px;
+          width: 300px;
           height:400px;
           border-radius: 10px;
         }
@@ -322,6 +326,11 @@
         position:absolute;
         animation: fly  5s ease-in infinite;
         filter: drop-shadow(-25px 50px 5px rgba(0, 0, 0, 0.473));
+      }
+      @media (max-width:780px) {
+        #T-Airplan{
+          width: 35%;
+        }
       }
       .container:hover{
            transform: scale(1.05);
@@ -462,6 +471,11 @@
       background-color:whitesmoke;
       height:100vh;
       padding-top:5.5rem;
+    }
+    @media (max-width:780px) {
+        .cont-us{
+          height: 150vh;
+        }
     }
     @media (max-width:440px) {
         .cont-us{
