--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
       }
       a {
         text-decoration: none;
-        color:rgb(165, 0, 0);
+        /*color:rgb(165, 0, 0);*/
+        color:#81BFDA;
         font-size: 20px;
         font-weight: bold;
       }
@@ -211,7 +212,7 @@
         height: 49rem;
       }
       .T-headline {
-        color: red;
+        color:#81BFDA ;
         font-size: 2.3rem;
         text-align: center;
         margin-top: 5rem;
@@ -482,12 +483,12 @@
     }
     @media (max-width:440px) {
         .cont-us{
-          height: 230vh;
+          height: 225vh;
         }
     }
     
     .cont-h{
-      color:red;
+      color:  #81BFDA ; 
       font-weight:bold;
       font-size:2.5rem;
       text-shadow: 2px 2px 2px black;
@@ -611,14 +612,14 @@
 
     .toggle{
             position:fixed;
-            top:53px;
+            top:55px;
             margin-top:1rem;
             z-index: 5;
             display: flex;
             flex-direction: column;
             text-align: center;
             align-items: center;
-            margin-top: 20px;
+            margin-top: 25px;
             width:100%;
             height:0px;
             overflow: hidden;
@@ -635,7 +636,7 @@
    #toggle-btn{
     text-align: center;
     padding:10px;
-    color:red;
+    color:#81BFDA  ;
     text-shadow: 2px 2px 3px white;
     background-color: white;
     width:15rem;
@@ -668,7 +669,7 @@
     </style>
   </head>
     <nav class="navbar">
-      <h1 class="logo"><span style="color: red;">M</span>ake <span style="color: red;">T</span>rip</h1>
+      <h1 class="logo"><span style="color:#81BFDA ;">M</span>ake <span style="color: red;">T</span>rip</h1>
       <ul class="manu">
         <li><a href="#home">Home</a></li>
         <li><a href="#place">Places</a></li>
@@ -693,7 +694,7 @@
     <div class="Home-img"></div>
 
     <div class="big-card-containar" id="place">
-      <h1 style="color:red; font-size: 2.5rem; margin-top: 5rem;padding:0 2rem;">
+      <h1 style="color: #81BFDA ; font-size: 2.5rem; margin-top: 5rem;padding:0 2rem;">
         Popular Destination
       </h1>
       </div>
